--- a/app/src/main/res/layout/order_sample.xml
+++ b/app/src/main/res/layout/order_sample.xml
@@ -41,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:text="Cheese Burger"
                     android:textColor="#000000"
-                    android:textSize="18sp"
+                    android:textSize="18dp"
                     android:textStyle="bold" />
 
                 <LinearLayout
@@ -93,7 +93,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView7"
+                        android:id="@+id/soldItemPrice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
