--- a/app/src/main/res/layout/order_sample.xml
+++ b/app/src/main/res/layout/order_sample.xml
@@ -41,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:text="Cheese Burger"
                     android:textColor="#000000"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <LinearLayout
