--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -26,7 +26,7 @@
                 app:srcCompat="@drawable/pizza" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/foodName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -133,7 +133,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/priceLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="15"
