--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         app:srcCompat="@drawable/welcomelogo" />
 
     <ImageView
@@ -24,7 +24,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="330dp"
+        android:layout_marginTop="310dp"
         android:fontFamily="@font/aclonica"
         android:gravity="center"
         android:text="Sign In"
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="375dp"
+        android:layout_marginTop="365dp"
         android:layout_marginRight="40dp"
         android:drawableLeft="@drawable/ic_baseline_phone_24"
         android:drawablePadding="13dp"
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="425dp"
+        android:layout_marginTop="415dp"
         android:layout_marginRight="40dp"
         android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
         android:drawablePadding="13dp"
@@ -68,12 +68,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="475dp"
+        android:layout_marginTop="460dp"
         android:layout_marginRight="40dp"
         android:gravity="right"
         android:text="Forget Password?"
         android:textColor="#32AA37"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:textStyle="bold" />
 
     <Button
@@ -90,26 +90,27 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="200dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="45dp"
+        android:layout_marginLeft="60dp"
         android:layout_marginTop="610dp"
-        android:layout_marginRight="60dp"
+        android:layout_marginRight="70dp"
         android:gravity="center"
         android:text="Don't have an account?"
         android:textColor="#FFFFFF"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="100dp"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="225dp"
+        android:layout_marginLeft="220dp"
         android:layout_marginTop="610dp"
         android:gravity="center"
         android:text="Register"
         android:textColor="#C51D1D"
-        android:textSize="16sp"
+        android:onClick="register"
+        android:textSize="15sp"
         android:textStyle="bold" />
 </RelativeLayout>
