--- a/app/src/main/res/layout/sample_mainfood.xml
+++ b/app/src/main/res/layout/sample_mainfood.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:scaleType="fitCenter"
+                android:scaleType="centerCrop"
                 app:srcCompat="@drawable/burger" />
 
             <LinearLayout
